--- a/index.html
+++ b/index.html
@@ -6,31 +6,21 @@
   <link href="style.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Advice generator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Advice generator app</title>
 
 </head>
 <body>
   <div class="container">
     <p class="advice">A D V I C E <span id="advice-number">#</span></p>
-    <p id="quote"></p><!-- Advice text goes here -->
+    <p id="quote"></p>
     <img class="separator" src="images/pattern-divider-mobile.svg">
     <fieldset>
       <div class="dice-container">
         <img class="dice" src="images/icon-dice.svg" onclick="quoteGenerator()">
       </div>
-    </fieldset>
-    
+    </fieldset>    
   </div>
-
-
   <script src="app.js"></script>
 </body>
-<!-- <footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</footer> -->
+
 </html>
