Fixed click problem.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <p id="quote"></p>
     <img class="separator" src="images/pattern-divider-mobile.svg">
     <fieldset>
-      <div class="dice-container">
-        <img class="dice" src="images/icon-dice.svg" onclick="quoteGenerator()">
+      <div class="dice-container" onclick="quoteGenerator()">
+        <img class="dice" src="images/icon-dice.svg" >
       </div>
     </fieldset>    
   </div>
